# academic-memory-mcp

./: .gitignore  .markdownlint-cli2.yaml  .test_env_summary.md  AGENTS.md  CHANGELOG.md  README.md  REVIEW.md  apply_all_changes.py  changes.diff  changes_summary.txt  check_logic.py  cliff.toml  code_review_request.md  combined_changes.txt  emails_to_process.md  environment.yml  final_changes.diff  final_clean_up.py  final_fix.py  final_update_server.py  finalize_fix.py  fix_all.py  fix_all_messed_up_fstrings.py  fix_ci_errors.py  fix_controller.py  fix_controller_final.py  fix_controller_final_v3.py  fix_docs.py  fix_docstrings.py  fix_docstrings_v2.py  fix_everything_v2.py  fix_final.py  fix_final_docstring.py  fix_final_surgical.py  fix_logic.py  fix_logic_engine.py  fix_search_tool.py  fix_student_tool.py  fix_tests.py  gradio_call.txt  (+40 more)
Inbox/: anonymized_mail.md
Steckbriefe/: daniel.gaida@th-koeln.de.md
config/: classifier_paths.yaml  classifier_paths.yaml.example  folders.yaml  models.yaml  ontology.yaml  secrets.env  train_test_folders.yaml  user.yaml.example
dev/: 404.html  index.html  objects.inv  sitemap.xml
mcp_university/: __init__.py  config.py  pyproject.toml
mcp_university.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
mcp_university/agent/: __init__.py  engine.py  mcp_agent.py
mcp_university/classifier/: __init__.py  classify_folder.py  controller.py  engine.py  evaluate.py  plot_data_distribution.py  predict.py  sort_by_direction.py  sort_emails.py  stopwords.py  top_words.py  train.py  xai_analysis.py
mcp_university/cli/: __init__.py  db.py  main.py  memory.py
mcp_university/config/: folders.yaml
mcp_university/crawler/: __init__.py  crawler.py  crawler.py.orig  watcher.py
mcp_university/data/indexes/test_qdrant/: meta.json
mcp_university/data/metadata/: test.db  university.db
mcp_university/knowledge_graph/: __init__.py  engine.py  ontology_learner.py
mcp_university/mcp_server/: __init__.py  server.py  tool_server.py
mcp_university/metadata/: __init__.py  kg_store.py  profile_store.py  store.py
mcp_university/parser/: __init__.py  factory.py  mail_parser.py  pdf_parser.py  text_parser.py
mcp_university/prompts/: __init__.py
mcp_university/retrieval/: __init__.py  index.py
mcp_university/src/mcp_university/: config.py
mcp_university/src/mcp_university.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
mcp_university/src/mcp_university/parser/: factory.py  mail_parser.py  pdf_parser.py  text_parser.py
mcp_university/src/mcp_university/summarizer/: engine.py
mcp_university/summarizer/: __init__.py  engine.py  profiler.py
mcp_university/utils/: __init__.py  anonymizer.py  email_search.py  encoding.py  llm_client_wrapper.py  memory.py  outlook.py  semester.py  shortcuts.py  torch_utils.py
outlook_macro/: AppointmentExport.bas  ArchiveOldStudentMails.bas  ArchiveOldStudentMails_Outlook2007.bas  CollectStudentEmails.bas  EmailSorter.bas  EnrichStudentEmailsFromBody.bas  ExportMailsBySubjectAndAge.bas  ExportStudentMails.bas  ExportStudentMails_Outlook2007.bas  FreeSlotExport.bas  enrich_yaml_from_config.py  student_domains.md
scripts/: __init__.py  appointment_gui.py  build_knowledge_graph.py  crawl_th_koeln_persons.py  create_colloquium_config.py  create_person_profiles.py  email_search_gui.py  extract_faq.py  extract_mocogi_data.py  fix_email_folders.py  flatten_directory.py  generate_synthetic_emails.py  index_memory.py  process_sorted_emails.py  process_sorted_emails.py.new  remove_empty_folders.py  replenish_datasets.py  restructure_classifier_data.py  summarize_classes.py  summarize_lectures.py  visualize_embeddings.py  visualize_knowledge_graph.py
skills/: SKILL_Appointment.md  SKILL_BA_Arbeit.md  SKILL_BachelorThesis.md  SKILL_FinalSubmission.md  SKILL_InformatikProjekt.md  SKILL_MA_Arbeit.md  SKILL_MasterThesis.md  SKILL_Other.md  SKILL_PO-Wechsel.md  SKILL_PraxisProjekt.md  SKILL_SHK.md  SKILL_WASP.md  SKILL_persona.md
test_profiles/: test@example.com.md
tests/: conftest.py  test_academic_degree_v2.py  test_age_logic.py  test_agent.py  test_agent_engine_coverage_boost.py  test_agent_engine_extended_v2.py  test_agent_enhanced.py  test_agent_extended.py  test_anonymization.py  test_anonymization_logic.py  test_anonymizer_extended.py  test_appointment_booking_behavior.py  test_appointment_gui_logic.py  test_appointment_sorting.py  test_classifier.py  test_classifier_analysis_extended.py  test_classifier_extra.py  test_classifier_scripts.py  test_classifier_scripts_extended.py  test_classifier_train.py  test_classifier_train_extended.py  test_classify_folder.py  test_cli_commands.py  test_cli_db_extended.py  test_cli_extended.py  test_colloquium_config.py  test_colloquium_flow.py  test_config_loading.py  test_controller_extended.py  test_controller_logic_extended.py  test_core.py  test_coverage_boost_comprehensive.py  test_crawler.py  test_crawler_coverage_boost.py  test_crawler_smart.py  test_cutoff_argument.py  test_db_management.py  test_delayed_summary.py  test_edge_replacement.py  (+71 more)
(+170 files in other folders)
