[project]
name = "mcp-university"
version = "2.2.8"
description = "Agentic University Memory System with MCP"
dependencies = [
    "tzlocal<5.0",
    "liteparse",
    "networkx",
    "pyvis",
    "fastmcp",
    "ollama",
    "qdrant-client",
    "watchdog",
    "pydantic",
    "requests",
    "pyyaml",
    "python-dotenv",

    "rank_bm25",
    "sentence-transformers",
    "docling",
    "extract-msg",
    "pdfminer.six",
    "python-docx",
    "beautifulsoup4",
    "markdown",
    "rich",
    "typer",
    "scikit-learn",
    "pandas",
    "numpy",
    "seaborn",
    "matplotlib",
    "tabulate",
    "xgboost",
    "gradio",
    "shap",
    "pytest-asyncio",
    "llm_client @ git+https://github.com/dgaida/llm_client.git",
]
requires-python = ">=3.10"

[project.scripts]
mcp-uni = "mcp_university.cli.main:app"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = [".", "packages/email_classifier/src"]
include = ["mcp_university*", "email_classifier*"]

[tool.interrogate]
ignore-init-method = true
ignore-init-module = false
ignore-magic = true
fail-under = 99
verbose = 1
exclude = ["setup.py", "docs", "build"]
