[project]
name = "mcp-university"
version = "2.7.6"
description = "Agentic University Memory System with MCP"
dependencies = [
    "tzlocal<6.0",
    "liteparse",
    "networkx",
    "pyvis",
    "fastmcp",
    "ollama",
    "qdrant-client",
    "watchdog",
    "pydantic",
    "requests",
    "pyyaml",
    "python-dotenv",

    "rank_bm25",
    "sentence-transformers",
    "docling",
    "extract-msg",
    "pdfminer.six",
    "python-docx",
    "beautifulsoup4",
    "markdown",
    "rich",
    "typer",
    "scikit-learn",
    "pandas",
    "numpy",
    "seaborn",
    "matplotlib",
    "tabulate",
    "xgboost",
    "gradio",
    "shap",
    "pytest-asyncio",
    "llm_client @ git+https://github.com/dgaida/llm_client.git",
]
requires-python = ">=3.10"

[project.scripts]
mcp-uni = "mcp_university.cli.main:app"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = [".", "packages/email_classifier/src", "packages/th_personal_graph/src"]
include = ["mcp_university*", "email_classifier*", "th_personal_graph*"]

[tool.interrogate]
ignore-init-method = true
ignore-init-module = false
ignore-magic = true
fail-under = 99
verbose = 1
exclude = ["setup.py", "docs", "build"]


[tool.ruff]
exclude = [
    "tests",
    "test_*.py",
    "docs",
    "build",
    "dist",
    "venv",
    ".git"
]

[tool.ruff.lint]
select = ["E", "F", "D"]
ignore = [
    "D100",  # Missing docstring in public module
    "D104",  # Missing docstring in public package
    "E501",  # Line too long
    "D107",  # Missing docstring in __init__
    "D202",  # No blank lines allowed after function docstring
    "D205",  # 1 blank line required between summary line and description
    "D212",  # Multi-line docstring summary should start at the first line
    "D301",  # Use r""" if any backslashes in a docstring
    "D415",  # First line should end with a period, question mark, or exclamation point
]

[tool.ruff.lint.pydocstyle]
convention = "google"
